kubernates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jap-deployment
  namespace: ingress-nginx 
spec:
  type: ClusterIP
  selector:
    app: djjap
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    # nodePort: 31420
