kubernates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: japanjot-ingress
  namespace: ingress-nginx 
  
 

spec:
  ingressClassName: nginx
  rules:
  - host: jpsingh.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jap-deployment
              port:
                number: 80
